design: 디자인 수정

--- a/src/main/resources/templates/usr/device/authentication.html
+++ b/src/main/resources/templates/usr/device/authentication.html
@@ -5,7 +5,13 @@
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
-    <a class="btn" href="/device/check">인증하기</a>
+    <div class="w-full p-4">
+        <p class="text-bold text-lg text-blue-700 mb-5">
+            기존에 사용하던 기기(환경)와 다릅니다.<br><br>
+            이메일 인증을 통해 현재 기기(환경)를 안심 기기로 등록해주세요.<br>
+        </p>
+        <a class="btn btn-block" href="/device/check">인증하기</a>
+    </div>
 
     <div class="mt-5"></div>
     <div class="mt-5"></div>
