--- a/src/main/resources/templates/usr/member/mypage.html
+++ b/src/main/resources/templates/usr/member/mypage.html
@@ -103,9 +103,9 @@
             <li class="menu-title mt-3">
                 <span>문제</span>
             </li>
-            <li><a href="/member/underlinedQuestionList">밑줄 친 문제 목록</a></li>
             <li><a href="/member/correctList">맞은 문제 목록</a></li>
             <li><a href="/member/incorrectList">틀린 문제 목록</a></li>
+            <li><a href="/book/list">내가 만든 문제집 목록</a></li>
             <li><a href="/member/myQuestionList">내가 만든 문제 목록</a></li>
             <li class="menu-title mt-3">
                 <span>게시판</span>
