--- a/src/main/resources/templates/usr/developer/fragment/menu/join.html
+++ b/src/main/resources/templates/usr/developer/fragment/menu/join.html
@@ -4,10 +4,10 @@
 
     <div class="card-body">
         <div class="flex justify-between">
-            <h2 class="card-title" th:text="|2. Access Key 발급|"></h2>
+            <h2 class="card-title" th:text="|2. Access Key|"></h2>
         </div>
         <div class="text-xs mt-3" th:text="|Access Key 로 IN HUB 의 모든 API 를 이용할 수 있습니다.|"></div>
-        <a href="/developer/create" class="btn btn-primary w-full mt-3">발급 하기</a>
+        <a href="/developer/access-key" class="btn btn-primary w-full mt-3">Access Key 확인하기</a>
     </div>
 
 </div>
