--- a/src/main/resources/templates/usr/member/comment.html
+++ b/src/main/resources/templates/usr/member/comment.html
@@ -1,13 +1,13 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>내가 쓴 답글</title></head>
+<head><title>내가 쓴 댓글</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
     <!-- 이곳에 로직을 구현해주시면 됩니다 -->
     <div class="max-w-2xl w-full px-4">
         <div th:if="${comments.isEmpty()}">
-            <p>작성한 답글이 없습니다.</p>
+            <p>작성한 댓글이 없습니다.</p>
         </div>
         <div th:if="${!comments.isEmpty()}" class="overflow-x-auto">
             <table class="table table-xs table-pin-rows table-pin-cols">
@@ -15,7 +15,7 @@
                 <tr>
                     <th>글번호</th>
                     <td>글제목</td>
-                    <td>내답글</td>
+                    <td>내댓글</td>
                     <td>등록일</td>
                 </tr>
                 </thead>
@@ -39,7 +39,7 @@
                 <tr>
                     <th>글번호</th>
                     <td>글제목</td>
-                    <td>내답글</td>
+                    <td>내댓글</td>
                     <td>등록일</td>
                 </tr>
                 </tfoot>
