--- a/src/main/resources/templates/usr/member/update.html
+++ b/src/main/resources/templates/usr/member/update.html
@@ -22,6 +22,9 @@
             <div class="flex flex-col mb-5">
                 <label class="badge mb-2" for="nickname">닉네임 변경</label>
                 <input class="input input-bordered w-full max-w-xs" type="text" th:value="${@rq.member.nickname}" id="nickname" name="nickname" placeholder="변경할 닉네임을 적어주세요." required />
+                <label class="label">
+                    <span class="label-text-alt">한글, 영어 대소문자, 숫자 2 ~ 8자리</span>
+                </label>
             </div>
             <button type="submit" class="btn btn-primary">변경하기</button>
         </form>
