--- a/src/main/resources/templates/usr/note/send.html
+++ b/src/main/resources/templates/usr/note/send.html
@@ -1,6 +1,6 @@
 <html layout:decorate="~{layout/layout}" xmlns:layout="http://www.w3.org/1999/xhtml">
 
-<head><title>문의 쪽지 보내기</title></head>
+<head><title>쪽지 보내기</title></head>
 
 <div layout:fragment="content" class="min-h-screen flex flex-col items-center gap-12">
 
