fix: 문제집 작성자 member.nickname 으로 변경

--- a/src/main/resources/templates/usr/home/fragment/index/popular.html
+++ b/src/main/resources/templates/usr/home/fragment/index/popular.html
@@ -18,7 +18,7 @@
 
             <div class="text-xs" th:text="${book.name}"></div>
             <div class="flex justify-between">
-                <div class="text-[6px]" th:text="|${book.author} |"></div>
+                <div class="text-[6px]" th:text="|${book.member.nickname} |"></div>
                 <div class="flex gap-1">
                     <div class="text-xs"><i class="fa-regular fa-user"></i></div>
                     <div class="stat-desc" th:text="${book.challenger}"></div>
