--- a/src/main/resources/templates/usr/book/fragment/list/title.html
+++ b/src/main/resources/templates/usr/book/fragment/list/title.html
@@ -23,7 +23,7 @@
 
           <div class="flex gap-3 mt-2">
             <div class="text-sm"><i class="fa-regular fa-pen-to-square"></i></div>
-            <div class="text-[4px]" th:text="${book.author}"></div>
+            <div class="text-[4px]" th:text="${book.member.nickname}"></div>
           </div>
 
           <div class="flex gap-3">
