--- a/src/main/resources/templates/usr/home/fragment/index/books.html
+++ b/src/main/resources/templates/usr/home/fragment/index/books.html
@@ -28,7 +28,7 @@
 
                             <div class="flex gap-3 mt-3">
                                 <div class="text-sm"><i class="fa-regular fa-pen-to-square"></i></div>
-                                <div class="text-[4px]" th:text="${book.author}"></div>
+                                <div class="text-[4px]" th:text="${book.member.nickname}"></div>
                             </div>
 
                             <div class="flex gap-3">
